Migrated SubmitButton and fixed some spacing issues by margin auto

--- a/styles/themes.scss
+++ b/styles/themes.scss
@@ -1,6 +1,7 @@
 :root {
   --bg-contact-card: #ffffff;
   --bg-color: #eaeaea;
+  --dark-bg: #023047;
   --color-white: #ffffff;
   --color-primary-content: #292929;
   --color-transparent: transparent;
